changes on result message

--- a/fruit_id.ipynb
+++ b/fruit_id.ipynb
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "id": "hUyXrjLGAY5N"
    },
@@ -901,16 +901,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 61ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step\n",
       "Answer: 0\n",
-      "It's an apple!\n"
+      "It's an apple! 🍏\n"
      ]
     }
    ],
@@ -921,9 +921,9 @@
     "answer = network.predict(image)\n",
     "print('Answer:',int(answer[0][0]))\n",
     "if answer > 0.5:\n",
-    "    print(\"It's an pear!\")\n",
+    "    print(\"It's an pear! 🍐\")\n",
     "else:\n",
-    "    print(\"It's an apple!\")"
+    "    print(\"It's an apple! 🍏\")"
    ]
   },
   {
